[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-condenser"
version = "0.1.0"
description = "CLI and TUI for condensing audio with subtitle-guided segment extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "textual>=0.58,<1.0",
]

[project.scripts]
condenser = "audio_condenser.cli:app"

[tool.setuptools]
packages = ["audio_condenser"]
